<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="50dp"
    android:gravity="center"
    android:orientation="vertical">


    <Button
        android:layout_width="match_parent"
        android:id="@+id/linearLayoutVertical"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn1"/>
    <Button
        android:layout_width="match_parent"
        android:id="@+id/btn2"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="pressbutton"
        android:text="@string/btn2"/>
    <Button
        android:layout_width="match_parent"
        android:id="@+id/btn3"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn3"/>
    <Button
        android:layout_width="match_parent"
        android:id="@+id/btn4"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn4"/>
    <Button
        android:layout_width="match_parent"
        android:id="@+id/btn5"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="pressbuttonframe"
        android:text="@string/btn5"/>
    <Button
        android:layout_width="match_parent"
        android:id="@+id/btn6"
        android:onClick="pressbuttonlist"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn6"/>
    <Button
        android:layout_width="match_parent"
        android:id="@+id/btn7"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="pressbuttongrid"
        android:text="@string/btn7"/>
</LinearLayout>
